Improved Smoother. Wrote some tests.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.PixelFlasherDemo
@@ -12,15 +12,15 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+; monitor_port = COM3
+; upload_port = COM3
 ; monitor_port = COM14
 ; upload_port = COM14
-; monitor_port = COM17
-; upload_port = COM17
-test_port = COM11
+monitor_port = COM17
+upload_port = COM17
+test_port = COM17
 
-test_filter = throttle
+test_filter = test_smoother
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
