Got FSR wokring with main.cpp.

--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
+  -D USE_THROTTLE_SMOOTHING
   ; -D PRINT_RETRIES
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
@@ -54,11 +55,13 @@ build_flags =
   ; -D PRINT_DISP_STATE
   -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
-  ; -D FEATURE_PUSH_TO_ENABLE
+  ; -D FEATURE_MOVING_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D FSR_MAX_RAW=2000
   -D FSR_MIN_RAW=500
+  -D FSR_BRAKE_PIN=39
+  -D FSR_ACCEL_PIN=36
 
 ;-------------------------------------------------------
 
@@ -66,16 +69,20 @@ build_flags =
 src_filter = ${dir.main}
 build_flags = 
   -D RELEASE_BUILD
+  -D USE_THROTTLE_SMOOTHING
   ; -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
-  -D FEATURE_PUSH_TO_ENABLE
+  -D FEATURE_MOVING_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D FSR_MAX_RAW=2000
   -D FSR_MIN_RAW=500
+  -D FSR_BRAKE_PIN=39
+  -D FSR_ACCEL_PIN=36
+
 ;-------------------------------------------------------
 
 
@@ -84,8 +91,13 @@ build_flags =
 src_filter = ${dir.FSR_play}
 
 build_flags = 
+  -D USE_THROTTLE_SMOOTHING
+  ; -D FEATURE_MOVING_TO_ENABLE
   -D FSR_MAX_RAW=1500
-  -D FSR_MIN_RAW=500
+  -D FSR_MIN_RAW=1000
+  -D FSR_BRAKE_PIN=39
+  -D FSR_ACCEL_PIN=36
+
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
