--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.FSR_play
+default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
@@ -12,12 +12,12 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-; monitor_port = COM3
-; upload_port = COM3
+monitor_port = COM3
+upload_port = COM3
 ; monitor_port = COM14
 ; upload_port = COM14
-monitor_port = COM17
-upload_port = COM17
+; monitor_port = COM17
+; upload_port = COM17
 test_port = COM17
 
 test_filter = test_smoother
