--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 ; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.FSR_play
+default_envs = esp32dev.Encoder_Play
 ; default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
@@ -12,8 +12,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+monitor_port = COM35
+upload_port = COM35
 ; monitor_port = COM14
 ; upload_port = COM14
 ; monitor_port = COM17
@@ -59,7 +59,7 @@ build_flags =
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D FSR_MAX_RAW=2000
-  -D FSR_MIN_RAW=500
+  -D FSR_MIN_RAW=800
   -D FSR_BRAKE_PIN=39
   -D FSR_ACCEL_PIN=36
 
@@ -79,16 +79,16 @@ build_flags =
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D FSR_MAX_RAW=2000
-  -D FSR_MIN_RAW=500
+  -D FSR_MIN_RAW=800
   -D FSR_BRAKE_PIN=39
   -D FSR_ACCEL_PIN=36
 
 ;-------------------------------------------------------
 
 
-[env:esp32dev.FSR_play]
+[env:esp32dev.Encoder_Play]
 
-src_filter = ${dir.FSR_play}
+src_filter = ${dir.Encoder_Play}
 
 build_flags = 
   -D USE_THROTTLE_SMOOTHING
@@ -104,6 +104,8 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/skelstar/Arduino-Debugging.git
   https://github.com/MattFryer/Smoothed.git
+  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
+
 ;-------------------------------------------------------
 
 [env:esp32dev.PixelFlasherDemo]
@@ -150,7 +152,7 @@ lib_deps =
 
 [dir]
 main = +<main/> -<comms_only/>
-FSR_play = +<FSR_play/>
+Encoder_Play = +<Encoder_Play/>
 PixelFlasherDemo = +<PixelFlasherDemo/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
