Working with new EncoderThrottleLib (github). Removed references to old libraries (including FSR).

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,7 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.Encoder_Play
 ; default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
@@ -12,12 +11,12 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-; monitor_port = COM35
-; upload_port = COM35
+monitor_port = COM35
+upload_port = COM35
 ; monitor_port = COM14
 ; upload_port = COM14
-monitor_port = COM10
-upload_port = COM10
+; monitor_port = COM10
+; upload_port = COM10
 test_port = COM17
 
 test_filter = test_smoother
@@ -39,7 +38,9 @@ lib_deps =
   
   https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
-
+  
+  https://github.com/skelstar/Esk8.EncoderThrottle.git
+   https://github.com/skelstar/Smoother.git
 ;-------------------------------------------------------
 
 [env:esp32dev.debug]
@@ -47,7 +48,7 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D USE_THROTTLE_SMOOTHING
+  ; -D USE_THROTTLE_SMOOTHING
   ; -D PRINT_RETRIES
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
@@ -82,29 +83,6 @@ build_flags =
   -D FSR_MIN_RAW=800
   -D FSR_BRAKE_PIN=39
   -D FSR_ACCEL_PIN=36
-
-;-------------------------------------------------------
-
-
-[env:esp32dev.Encoder_Play]
-
-src_filter = ${dir.Encoder_Play}
-
-build_flags = 
-  -D USE_THROTTLE_SMOOTHING
-  ; -D FEATURE_MOVING_TO_ENABLE
-  -D FSR_MAX_RAW=1500
-  -D FSR_MIN_RAW=1000
-  -D FSR_BRAKE_PIN=39
-  -D FSR_ACCEL_PIN=36
-
-
-lib_deps = 
-  https://github.com/lewisxhe/Button2.git
-  https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/skelstar/Arduino-Debugging.git
-  https://github.com/MattFryer/Smoothed.git
-  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
 
 ;-------------------------------------------------------
 
