--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,7 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -57,12 +56,9 @@ build_flags =
   -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
+  -D FEATURE_USE_DEADMAN
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D FSR_MAX_RAW=2000
-  -D FSR_MIN_RAW=800
-  -D FSR_BRAKE_PIN=39
-  -D FSR_ACCEL_PIN=36
 
 ;-------------------------------------------------------
 
@@ -77,24 +73,9 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   -D FEATURE_MOVING_TO_ENABLE
+  -D FEATURE_USE_DEADMAN
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D FSR_MAX_RAW=2000
-  -D FSR_MIN_RAW=800
-  -D FSR_BRAKE_PIN=39
-  -D FSR_ACCEL_PIN=36
-
-;-------------------------------------------------------
-
-[env:esp32dev.PixelFlasherDemo]
-
-src_filter = ${dir.PixelFlasherDemo}
-
-build_flags = 
-
-lib_deps = 
-  https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/skelstar/Arduino-Debugging.git
 
 ;-------------------------------------------------------
 
@@ -131,6 +112,5 @@ lib_deps =
 [dir]
 main = +<main/> -<comms_only/>
 Encoder_Play = +<Encoder_Play/>
-PixelFlasherDemo = +<PixelFlasherDemo/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
