ENCODER_BRAKE_COUNTS and deadman

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
@@ -39,7 +39,7 @@ lib_deps =
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   
   https://github.com/skelstar/Esk8.EncoderThrottle.git
-   https://github.com/skelstar/Smoother.git
+  https://github.com/skelstar/Smoother.git
 ;-------------------------------------------------------
 
 [env:esp32dev.debug]
@@ -47,13 +47,12 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D USE_THROTTLE_SMOOTHING
   ; -D PRINT_RETRIES
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE
-  -D PRINT_DISP_STATE_EVENT
+  ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
   -D FEATURE_USE_DEADMAN
@@ -66,15 +65,13 @@ build_flags =
 src_filter = ${dir.main}
 build_flags = 
   -D RELEASE_BUILD
-  -D USE_THROTTLE_SMOOTHING
   ; -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   -D FEATURE_MOVING_TO_ENABLE
-  -D FEATURE_USE_DEADMAN
-  -D SEND_TO_BOARD_INTERVAL=200
+  -D FEATURE_USE_DEADMAN 
   -D READ_TRIGGER_PERIOD=200
 
 ;-------------------------------------------------------
