--- a/platformio.ini
+++ b/platformio.ini
@@ -10,12 +10,12 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM35
-upload_port = COM35
+; monitor_port = COM35
+; upload_port = COM35
 ; monitor_port = COM14
 ; upload_port = COM14
-; monitor_port = COM10
-; upload_port = COM10
+monitor_port = COM10
+upload_port = COM10
 test_port = COM17
 
 test_filter = test_smoother
@@ -51,7 +51,7 @@ build_flags =
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
