Menu behaves better (encoder not taking over). Context in value-setting screen.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
