--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,8 @@
 [platformio]
 ; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
+default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -12,8 +13,8 @@ framework = arduino
 monitor_speed = 115200
 ; monitor_port = COM36
 ; upload_port = COM36
-monitor_port = COM22
-upload_port = COM22
+monitor_port = COM33
+upload_port = COM33
 ; monitor_port = COM10
 ; upload_port = COM10
 test_port = COM17
@@ -103,6 +104,19 @@ build_flags =
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
+;-------------------------------------------------------
+
+[env:esp32dev.haptic_test]
+
+
+src_filter = ${dir.haptic_test}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
+  https://github.com/skelstar/Arduino-Debugging.git
+
 
 ;-------------------------------------------------------
 
@@ -110,4 +124,5 @@ lib_deps =
 main = +<main/> -<comms_only/>
 Encoder_Play = +<Encoder_Play/>
 rtos_play = +<rtos_play/>
+haptic_test = +<haptic_test/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
