--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.haptic_test
+; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -13,8 +13,8 @@ framework = arduino
 monitor_speed = 115200
 ; monitor_port = COM36
 ; upload_port = COM36
-monitor_port = COM33
-upload_port = COM33
+monitor_port = COM22
+upload_port = COM22
 ; monitor_port = COM10
 ; upload_port = COM10
 test_port = COM17
