Updating screen when ampHours change.

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,8 @@ default_envs = esp32dev.debug
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
+; default_envs = xiao_play
+
 
 [env]
 platform = espressif32
@@ -13,10 +15,6 @@ framework = arduino
 monitor_speed = 115200
 monitor_port = COM36
 upload_port = COM36
-; monitor_port = COM22
-; upload_port = COM22
-; monitor_port = COM10
-; upload_port = COM10
 test_port = COM17
 
 test_filter = test_smoother
@@ -41,8 +39,8 @@ lib_deps =
   
   https://github.com/skelstar/Esk8.EncoderThrottle.git
   https://github.com/skelstar/Smoother.git
-;-------------------------------------------------------
 
+;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
@@ -61,7 +59,6 @@ build_flags =
   -D READ_TRIGGER_PERIOD=200
 
 ;-------------------------------------------------------
-
 [env:esp32dev.release]
 src_filter = ${dir.main}
 build_flags = 
@@ -76,7 +73,6 @@ build_flags =
   -D READ_TRIGGER_PERIOD=200
 
 ;-------------------------------------------------------
-
 [env:esp32dev.nrf_tft_spi_sharing]
 
 src_filter = ${dir.nrf_tft_spi_sharing}
@@ -104,8 +100,8 @@ build_flags =
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
-;-------------------------------------------------------
 
+;-------------------------------------------------------
 [env:esp32dev.haptic_test]
 
 
@@ -117,6 +113,23 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/skelstar/Arduino-Debugging.git
 
+;-------------------------------------------------------
+[env:xiao_play]
+
+platform = atmelsam
+board = mzeroUSB
+board_build.mcu = samd21g18a
+board_build.f_cpu = 48000000L
+framework = arduino
+upload_protocol = sam-ba
+
+src_filter = ${dir.xiao_play}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
+
 
 ;-------------------------------------------------------
 
@@ -125,4 +138,5 @@ main = +<main/> -<comms_only/>
 Encoder_Play = +<Encoder_Play/>
 rtos_play = +<rtos_play/>
 haptic_test = +<haptic_test/>
-nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
+nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
+xiao_play = +<xiao_play/> 
