Cleaned out the code. Got throttle working.

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,6 @@ lib_deps =
   https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   
-  https://github.com/skelstar/Esk8.EncoderThrottle.git
   https://github.com/skelstar/Smoother.git
 
 ;-------------------------------------------------------
@@ -50,11 +49,11 @@ build_flags =
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
-  -D FEATURE_USE_DEADMAN
+  ; -D FEATURE_USE_DEADMAN
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
 
@@ -69,7 +68,7 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   -D FEATURE_MOVING_TO_ENABLE
-  -D FEATURE_USE_DEADMAN 
+  ; -D FEATURE_USE_DEADMAN 
   -D READ_TRIGGER_PERIOD=200
 
 ;-------------------------------------------------------
@@ -135,7 +134,6 @@ lib_deps =
 
 [dir]
 main = +<main/> -<comms_only/>
-Encoder_Play = +<Encoder_Play/>
 rtos_play = +<rtos_play/>
 haptic_test = +<haptic_test/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
