Getting "FIRST_PACKET" reason from board and counting resets and disaplying on the screen.

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,6 +5,7 @@ default_envs = esp32dev.debug
 ; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = xiao_play
+; default_envs = comms_ping
 
 
 [env]
@@ -46,9 +47,9 @@ build_flags =
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   ; -D PRINT_RETRIES
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_COMMS_STATE_EVENT
-  -D PRINT_THROTTLE
+  -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE_EVENT
+  ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
@@ -56,6 +57,7 @@ build_flags =
   ; -D FEATURE_USE_DEADMAN
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
+  -D THROTTLE_PROTECTION=80
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
@@ -70,6 +72,7 @@ build_flags =
   -D FEATURE_MOVING_TO_ENABLE
   ; -D FEATURE_USE_DEADMAN 
   -D READ_TRIGGER_PERIOD=200
+  -D THROTTLE_PROTECTION=80
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
@@ -130,11 +133,36 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
 
 
+
+;-------------------------------------------------------
+[env:comms_ping]
+
+src_filter = ${dir.comms_ping}
+
+build_flags = 
+  -D USE_SPI2
+
+lib_deps = 
+  https://github.com/lewisxhe/Button2.git
+  https://github.com/pfeerick/elapsedMillis.git
+  https://github.com/MattFryer/Smoothed.git
+
+  https://github.com/skelstar/VESC_Comms.git
+  https://github.com/skelstar/Esk8.Board.Data.git
+  https://github.com/skelstar/Arduino-Debugging.git
+
+  https://github.com/greiman/DigitalIO.git
+  https://github.com/nRF24/RF24Network.git
+  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  https://github.com/skelstar/arduino-fsm.git 
+
+
 ;-------------------------------------------------------
 
 [dir]
-main = +<main/> -<comms_only/>
+main = +<main/>
 rtos_play = +<rtos_play/>
 haptic_test = +<haptic_test/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
 xiao_play = +<xiao_play/> 
+comms_ping = +<comms_ping/>
