--- a/platformio.ini
+++ b/platformio.ini
@@ -47,14 +47,15 @@ build_flags =
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   ; -D PRINT_RETRIES
-  -D PRINT_COMMS_STATE
-  -D PRINT_COMMS_STATE_EVENT
+  ; -D PRINT_COMMS_STATE
+  ; -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
   ; -D FEATURE_USE_DEADMAN
+  ; -D FEATURE_ENDLIGHT
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D THROTTLE_PROTECTION=80
@@ -71,6 +72,7 @@ build_flags =
   ; -D FEATURE_CRUISE_CONTROL
   -D FEATURE_MOVING_TO_ENABLE
   ; -D FEATURE_USE_DEADMAN 
+  ; -D FEATURE_ENDLIGHT
   -D READ_TRIGGER_PERIOD=200
   -D THROTTLE_PROTECTION=80
 
