--- a/platformio.ini
+++ b/platformio.ini
@@ -46,11 +46,11 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_RETRIES
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_RETRIES
+  -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
@@ -59,6 +59,8 @@ build_flags =
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D THROTTLE_PROTECTION=80
+  -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D SUPPRESS_EV_COMMS_PKT_RXD
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
@@ -73,8 +75,10 @@ build_flags =
   -D FEATURE_MOVING_TO_ENABLE
   ; -D FEATURE_USE_DEADMAN 
   ; -D FEATURE_ENDLIGHT
+  -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D THROTTLE_PROTECTION=80
+  -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
