- inits id when gets first packet from board - handles/displays missedPackets and unsuccessful tx from board - moved VescData.h to includes

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
@@ -27,7 +27,6 @@ lib_deps =
 
   https://github.com/skelstar/arduino-fsm.git 
   https://github.com/skelstar/VESC_Comms.git
-  https://github.com/skelstar/Esk8.Board.Data.git
   https://github.com/skelstar/Arduino-Debugging.git
   https://github.com/adafruit/Adafruit_NeoPixel.git
   
