--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM36
 upload_port = COM36
-test_port = COM17
+monitor_port = $upload_port
+test_port = $upload_port
 
 test_filter = test_smoother
 
@@ -46,10 +46,10 @@ build_flags =
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   -D PRINT_RETRIES
-  -D PRINT_COMMS_STATE
-  -D PRINT_COMMS_STATE_EVENT
+  ; -D PRINT_COMMS_STATE
+  ; -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_MOVING_TO_ENABLE
