--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
@@ -15,7 +15,7 @@ framework = arduino
 
 monitor_speed = 115200
 upload_port = COM36
-monitor_port = $upload_port
+monitor_port = COM36
 test_port = $upload_port
 
 test_filter = test_smoother
@@ -34,7 +34,6 @@ lib_deps =
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
   
-  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   
   https://github.com/skelstar/Smoother.git
@@ -52,9 +51,7 @@ build_flags =
   -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
-  ; -D FEATURE_MOVING_TO_ENABLE
-  ; -D FEATURE_USE_DEADMAN
-  ; -D FEATURE_ENDLIGHT
+  -D FEATURE_MOVING_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
@@ -71,8 +68,6 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   -D FEATURE_MOVING_TO_ENABLE
-  ; -D FEATURE_USE_DEADMAN 
-  ; -D FEATURE_ENDLIGHT
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
   -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
