Lots of clean up... esp of state.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
@@ -50,11 +50,11 @@ build_flags =
   ; -D PRINT_THROTTLE
   -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_CRUISE_CONTROL
-  -D FEATURE_MOVING_TO_ENABLE
+  -D FEATURE_CRUISE_CONTROL
+  -D PUSH_TO_START
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D SUPPRESS_EV_COMMS_PKT_RXD
 
 ;-------------------------------------------------------
@@ -66,11 +66,11 @@ build_flags =
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_CRUISE_CONTROL
-  -D FEATURE_MOVING_TO_ENABLE
+  -D FEATURE_CRUISE_CONTROL
+  -D PUSH_TO_START
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
