--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
@@ -40,12 +40,14 @@ build_flags =
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
+  -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D SUPPRESS_EV_COMMS_PKT_RXD
 
@@ -61,6 +63,7 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
+  -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
 
 ;-------------------------------------------------------
