Feature/event driven code tidy (#32)
* Lots of clean up... esp of state.

* More clean up, got rid of options screens

* board class... remembering trigger in FSM

* Flag utils

* Big refactor

* Refined BatteryLib a bit

* Showing remote battery on display. Detects charging.

* Not sending retries on sends

* Cleaned out some code

* TFT_DEFAULT_BG

* Using FastMapper

* Removed comments

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,9 +2,7 @@
 ; default_envs = esp32dev.debug
 default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.haptic_test
 ; default_envs = esp32dev.nrf_tft_spi_sharing
-; default_envs = xiao_play
 ; default_envs = comms_ping
 
 
@@ -26,35 +24,32 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
 
   https://github.com/skelstar/arduino-fsm.git 
-  https://github.com/skelstar/VESC_Comms.git
   https://github.com/skelstar/Arduino-Debugging.git
-  https://github.com/adafruit/Adafruit_NeoPixel.git
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
   
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+  https://github.com/RobTillaart/FastMap.git
   
-  https://github.com/skelstar/Smoother.git
-
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D PRINT_RETRIES
-  ; -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_CRUISE_CONTROL
-  -D FEATURE_MOVING_TO_ENABLE
+  -D FEATURE_CRUISE_CONTROL=true
+  -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D READ_TRIGGER_PERIOD=200
-  -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D MAX_SEND_ATTEMPTS=5
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D SUPPRESS_EV_COMMS_PKT_RXD
 
 ;-------------------------------------------------------
@@ -66,11 +61,11 @@ build_flags =
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_CRUISE_CONTROL
-  -D FEATURE_MOVING_TO_ENABLE
+  -D FEATURE_CRUISE_CONTROL
+  -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D READ_TRIGGER_PERIOD=200
-  -D CONSECUTIVE_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D MAX_SEND_ATTEMPTS=5
+  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
@@ -114,25 +109,6 @@ lib_deps =
   https://github.com/skelstar/Arduino-Debugging.git
 
 ;-------------------------------------------------------
-[env:xiao_play]
-
-platform = atmelsam
-board = mzeroUSB
-board_build.mcu = samd21g18a
-board_build.f_cpu = 48000000L
-framework = arduino
-upload_protocol = sam-ba
-
-src_filter = ${dir.xiao_play}
-
-build_flags = 
-
-lib_deps = 
-  https://github.com/pfeerick/elapsedMillis.git
-
-
-
-;-------------------------------------------------------
 [env:comms_ping]
 
 src_filter = ${dir.comms_ping}
@@ -160,7 +136,5 @@ lib_deps =
 [dir]
 main = +<main/>
 rtos_play = +<rtos_play/>
-haptic_test = +<haptic_test/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
-xiao_play = +<xiao_play/> 
 comms_ping = +<comms_ping/>
