Created some new fonts (12, 16, 48 Orbitron)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,10 @@
 [platformio]
 ; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
+default_envs = fonts_demo
 
 
 [env]
@@ -132,9 +133,20 @@ lib_deps =
 
 
 ;-------------------------------------------------------
+[env:fonts_demo]
+
+src_filter = ${dir.fonts_demo}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+
+;-------------------------------------------------------
 
 [dir]
 main = +<main/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
 comms_ping = +<comms_ping/>
+fonts_demo = +<fonts_demo/>
