Chunky digits working on sprite. Also new fonts.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,10 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
-default_envs = fonts_demo
+; default_envs = fonts_demo
 
 
 [env]
