--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
@@ -40,11 +40,11 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D PRINT_COMMS_STATE
+  ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
