- fixed setup vscode issue

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
@@ -13,8 +13,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-upload_port = COM36
-monitor_port = COM36
+upload_port = COM6
+monitor_port = COM6
 test_port = $upload_port
 
 test_filter = test_smoother
@@ -25,7 +25,7 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
 
   https://github.com/skelstar/arduino-fsm.git 
-  https://github.com/skelstar/Arduino-Debugging.git
+  https://github.com/tttapa/Arduino-Helpers
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
