Feature/custom font (#34)
* Got Orbitron working on searching screen

* More changes. Minor.

* Created some new fonts (12, 16, 48 Orbitron)

* Chunky digits working on sprite. Also new fonts.

* Fixed stopped/moving. Showing Trip Amp hours. Started screeWhenDisconnected.

* Showing remote battery on searching screen

* Tidied up some "problems".

* chunky digit was outputing to sprite, didn't work. Now tft.

* - fixed setup vscode issue

* - numbers should clear when screen updated

* - got quarter screens working

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,7 @@ default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
+; default_envs = fonts_demo
 
 
 [env]
@@ -12,8 +13,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-upload_port = COM36
-monitor_port = COM36
+upload_port = COM6
+monitor_port = COM6
 test_port = $upload_port
 
 test_filter = test_smoother
@@ -24,7 +25,7 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
 
   https://github.com/skelstar/arduino-fsm.git 
-  https://github.com/skelstar/Arduino-Debugging.git
+  https://github.com/tttapa/Arduino-Helpers
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
@@ -39,11 +40,11 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D PRINT_COMMS_STATE
+  ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
@@ -132,9 +133,20 @@ lib_deps =
 
 
 ;-------------------------------------------------------
+[env:fonts_demo]
+
+src_filter = ${dir.fonts_demo}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+
+;-------------------------------------------------------
 
 [dir]
 main = +<main/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/> 
 comms_ping = +<comms_ping/>
+fonts_demo = +<fonts_demo/>
