- controller (client) coonecting but bnot doing anything afterwards

--- a/platformio.ini
+++ b/platformio.ini
@@ -44,13 +44,14 @@ build_flags =
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD
 
 ;-------------------------------------------------------
@@ -67,6 +68,7 @@ build_flags =
   -D SEND_TO_BOARD_INTERVAL=200
   -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
