- bleclient in it's own lib - hudTask file - reconnects, which is nice!

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,10 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 
-monitor_speed = 115200
 upload_port = COM6
 monitor_port = COM6
+monitor_speed = 115200
+monitor_filters = time
 test_port = $upload_port
 
 test_filter = test_smoother
