Pretty much got reset detection working correctly - might rely on newer VescData model

--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,7 @@ build_flags =
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
+  ; -D PRINT_RESET_DETECTION
   -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL=true
@@ -52,6 +53,7 @@ build_flags =
   -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D SUPPRESS_EV_COMMS_PKT_RXD
+  -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
@@ -67,6 +69,7 @@ build_flags =
   -D SEND_TO_BOARD_INTERVAL=200
   -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
