Tidied some config settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
@@ -50,9 +50,9 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D SUPPRESS_EV_COMMS_PKT_RXD
+  ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
@@ -67,8 +67,8 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
