Added version checking and using displayEventManager more

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,10 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
 ; default_envs = fonts_demo
-
 
 [env]
 platform = espressif32
@@ -18,6 +17,10 @@ monitor_port = COM6
 test_port = $upload_port
 
 test_filter = test_smoother
+
+build_flags =
+  -D VERSION=2.7
+  -D VERSION_BOARD_COMPAT=2.5
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -37,7 +40,11 @@ lib_deps =
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
+
 build_flags = 
+
+  ${env.build_flags}
+
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
@@ -58,7 +65,11 @@ build_flags =
 ;-------------------------------------------------------
 [env:esp32dev.release]
 src_filter = ${dir.main}
+
 build_flags = 
+
+  ${env.build_flags}
+
   -D RELEASE_BUILD
   ; -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
