--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,6 @@ default_envs = esp32dev.debug
 ; default_envs = comms_ping
 ; default_envs = fonts_demo
 
-
 [env]
 platform = espressif32
 board = nodemcu-32s
@@ -18,6 +17,10 @@ monitor_port = COM6
 test_port = $upload_port
 
 test_filter = test_smoother
+
+build_flags =
+  -D VERSION=2.7
+  -D VERSION_BOARD_COMPAT=2.5
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -37,26 +40,36 @@ lib_deps =
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
+
 build_flags = 
+
+  ${env.build_flags}
+
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
+  ; -D PRINT_RESET_DETECTION
   -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D SUPPRESS_EV_COMMS_PKT_RXD
+  ; how often we store moving time data in memory
+  -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
 src_filter = ${dir.main}
+
 build_flags = 
+
+  ${env.build_flags}
+
   -D RELEASE_BUILD
   ; -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
@@ -65,8 +78,9 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D MAX_SEND_ATTEMPTS=5
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  ; how often we store moving time data in memory
+  -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
 [env:esp32dev.nrf_tft_spi_sharing]
