Tested using BLE and had issues (probably) with tasks not blocking other tasks and there being a NRF packet that was sent halfway through a the led/ble task being sent.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
@@ -48,19 +48,20 @@ build_flags =
 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_COMMS_STATE=1
+  -D PRINT_COMMS_STATE_EVENT=1
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
   ; -D PRINT_RESET_DETECTION
   -D PRINT_DISP_STATE
-  ; -D PRINT_DISP_STATE_EVENT
+  -D PRINT_DISP_STATE_EVENT
+  ; -D PRINT_BUTTON_EVENTS=1
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D STORE_SNAPSHOT_INTERVAL=5000
-  -D SUPPRESS_EV_COMMS_PKT_RXD
+  -D SUPPRESS_EV_COMMS_PKT_RXD=1
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
@@ -74,9 +75,6 @@ build_flags =
 
   -D RELEASE_BUILD
   ; -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
