--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 ; default_envs = comms_ping
@@ -33,7 +33,8 @@ lib_deps =
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  https://github.com/skelstar/NRF24L01.Library.git#tidy-up
+  https://github.com/skelstar/Esk8-Shared.git
   
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   https://github.com/RobTillaart/FastMap.git
@@ -50,7 +51,6 @@ build_flags =
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
-  -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
   ; -D PRINT_RESET_DETECTION
   -D PRINT_DISP_STATE
