--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,21 @@
 {
   "workbench.colorCustomizations": {
     "editor.lineHighlightBackground": "#474747",
+    "statusBar.background": "#ff3d00",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#ff6433",
+    "tab.activeBorder": "#ff6433",
+    "titleBar.activeBackground": "#ff3d00",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#ff3d0099",
+    "titleBar.inactiveForeground": "#e7e7e799",
     "activityBar.activeBackground": "#ff6433",
     "activityBar.activeBorder": "#00ff3d",
     "activityBar.background": "#ff6433",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#00ff3d",
-    "activityBarBadge.foreground": "#15202b",
-    "statusBar.background": "#ff3d00",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ff6433",
-    "titleBar.activeBackground": "#ff3d00",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#ff3d0099",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "activityBarBadge.foreground": "#15202b"
   },
   "files.associations": {
     "*.tcc": "cpp",
@@ -60,7 +61,9 @@
     "cinttypes": "cpp",
     "utility": "cpp",
     "typeinfo": "cpp",
-    "*.ipp": "cpp"
+    "*.ipp": "cpp",
+    "chrono": "cpp",
+    "ratio": "cpp"
   },
   "editor.formatOnSave": true,
   "peacock.color": "#ff3d00"
