--- a/platformio.ini
+++ b/platformio.ini
@@ -25,11 +25,11 @@ build_flags =
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
-  https://github.com/bblanchon/ArduinoJson.git#6.x
+  ; https://github.com/bblanchon/ArduinoJson.git#6.x
   https://github.com/pfeerick/elapsedMillis.git
 
   https://github.com/skelstar/arduino-fsm.git 
-  https://github.com/tttapa/Arduino-Helpers
+  ; https://github.com/tttapa/Arduino-Helpers
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
@@ -51,19 +51,19 @@ build_flags =
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
-  ; -D PRINT_THROTTLE
-  ; -D PRINT_RESET_DETECTION
-  -D PRINT_DISP_STATE
-  -D PRINT_DISP_STATE_EVENT
+  ; -D PRINT_THROTTLE=1
+  -D PRINT_RESET_DETECTION=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_BUTTON_EVENTS=1
+  -D PRINT_HUD_COMMS=1
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  -D STORE_SNAPSHOT_INTERVAL=5000
-  -D SUPPRESS_EV_COMMS_PKT_RXD=1
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
+  -D SUPPRESS_EV_COMMS_PKT_RXD=1
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
