Sending message, stop / moving. Working very well.

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,12 +49,13 @@ build_flags =
 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D PRINT_COMMS_STATE=1
+  ; -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_RESET_DETECTION=1
-  -D PRINT_DISP_STATE=1
+  ; -D PRINT_DISP_STATE=1
   -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_BUTTON_EVENTS=1
   -D PRINT_HUD_COMMS=1
   -D FEATURE_CRUISE_CONTROL=true
