ACKNOWLEDGE and hudMessageQueue

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,7 @@ build_flags =
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_BUTTON_EVENTS=1
   -D PRINT_HUD_COMMS=1
+  -D PRINT_HUD_MESSAGE_QUEUE_COMMS=1
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
