--- a/platformio.ini
+++ b/platformio.ini
@@ -54,7 +54,7 @@ build_flags =
   ; -D PRINT_THROTTLE=1
   -D PRINT_RESET_DETECTION=1
   ; -D PRINT_DISP_STATE=1
-  -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_BUTTON_EVENTS=1
   -D PRINT_HUD_COMMS=1
