--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,7 @@ build_flags =
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
+  -D IGNORE_IF_HUD_OFFLINE=1
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
