--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ lib_deps =
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  https://github.com/skelstar/NRF24L01.Library.git#v1.0
   
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   https://github.com/RobTillaart/FastMap.git
@@ -47,8 +47,8 @@ build_flags =
 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
   ; -D PRINT_RESET_DETECTION
@@ -58,7 +58,7 @@ build_flags =
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  -D SUPPRESS_EV_COMMS_PKT_RXD
+  ; -D SUPPRESS_EV_COMMS_PKT_RXD
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
