Got it working. Namespaces. Stack trace now being debugged.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ default_envs = esp32dev.debug
 
 [env]
 platform = espressif32
-board = nodemcu-32s
+board = esp32dev ; nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
@@ -27,7 +27,7 @@ lib_deps =
   https://github.com/bblanchon/ArduinoJson.git#6.x
   https://github.com/pfeerick/elapsedMillis.git
 
-  https://github.com/skelstar/arduino-fsm.git 
+  https://github.com/skelstar/arduino-fsm.git
   https://github.com/tttapa/Arduino-Helpers
   
   https://github.com/greiman/DigitalIO.git
@@ -40,6 +40,8 @@ lib_deps =
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
+monitor_filters = esp32_exception_decoder ; , time ;, default
+; build_type = debug
 
 build_flags = 
 
@@ -58,7 +60,6 @@ build_flags =
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  ; -D SUPPRESS_EV_COMMS_PKT_RXD
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
