Trying to get controller to work after rogue board incident (#38)
* Some changes around queues. Looping for some reason (once connected).

* Got it working. Namespaces. Stack trace now being debugged.

* Refactored CommsState to use FsmManager

* Got FsmManager reference working.

* Put dispStateEvent into namespace

* refactored DISP_EV_

* DispState now working with enumManager and fsmManager

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ default_envs = esp32dev.debug
 
 [env]
 platform = espressif32
-board = nodemcu-32s
+board = esp32dev ; nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
@@ -27,12 +27,13 @@ lib_deps =
   https://github.com/bblanchon/ArduinoJson.git#6.x
   https://github.com/pfeerick/elapsedMillis.git
 
-  https://github.com/skelstar/arduino-fsm.git 
+  https://github.com/skelstar/arduino-fsm.git#examples-and-platformio
+  https://github.com/skelstar/Esk8-Shared#improvements
   https://github.com/tttapa/Arduino-Helpers
   
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  https://github.com/skelstar/NRF24L01.Library.git#v1.0
   
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   https://github.com/RobTillaart/FastMap.git
@@ -40,6 +41,8 @@ lib_deps =
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
+monitor_filters = esp32_exception_decoder ; , time ;, default
+; build_type = debug
 
 build_flags = 
 
@@ -47,8 +50,8 @@ build_flags =
 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE_EVENT
   -D PRINT_SEND_RETRIES
   ; -D PRINT_THROTTLE
   ; -D PRINT_RESET_DETECTION
@@ -58,7 +61,6 @@ build_flags =
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  -D SUPPRESS_EV_COMMS_PKT_RXD
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
