esp32_exception_decoder and fsm library references

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ framework = arduino
 upload_port = COM6
 monitor_port = COM6
 monitor_speed = 115200
-monitor_filters = time
+monitor_filters = time, esp32_exception_decoder
 test_port = $upload_port
 
 test_filter = test_smoother
@@ -34,7 +34,7 @@ lib_deps =
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#adding-generic-client
-  https://github.com/skelstar/Esk8-Shared.git
+  https://github.com/skelstar/Esk8-Shared.git#improvements
   
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   https://github.com/RobTillaart/FastMap.git
@@ -146,7 +146,7 @@ lib_deps =
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
-  https://github.com/skelstar/arduino-fsm.git 
+  https://github.com/skelstar/arduino-fsm.git#improvements
 
 
 ;-------------------------------------------------------
