--- a/platformio.ini
+++ b/platformio.ini
@@ -67,6 +67,7 @@ build_flags =
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
+  ; -D STATE_STRING_FORMAT="[%s | %s]\n"
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
