--- a/platformio.ini
+++ b/platformio.ini
@@ -57,8 +57,14 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_BUTTON_EVENTS=1
-  -D PRINT_HUD_COMMS=1
-  -D PRINT_HUD_MESSAGE_QUEUE_COMMS=1
+  -D PRINT_TX_TO_HUD=1
+  -D PRINT_RX_FROM_HUD=1
+  ; -D PRINT_TX_TO_BOARD=1
+  ; -D PRINT_RX_FROM_BOARD=1
+  ; -D PRINT_HUD_QUEUE_SEND=1
+  ; -D PRINT_HUD_QUEUE_READ=1
+  -D PRINT_HUD_ACTION_QUEUE_SEND=1
+  -D PRINT_HUD_ACTION_QUEUE_READ=1
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
