--- a/platformio.ini
+++ b/platformio.ini
@@ -47,20 +47,20 @@ build_flags =
 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE=1
+  -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_RESET_DETECTION=1
-  ; -D PRINT_DISP_STATE=1
-  ; -D PRINT_DISP_STATE_EVENT=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_BUTTON_EVENTS=1
-  -D PRINT_TX_TO_HUD=1
-  -D PRINT_RX_FROM_HUD=1
   ; -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
-  ; -D PRINT_HUD_QUEUE_SEND=1
-  ; -D PRINT_HUD_QUEUE_READ=1
+  -D PRINT_TX_TO_HUD=1
+  -D PRINT_RX_FROM_HUD=1
+  -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  -D PRINT_HUD_TASKS_QUEUE_READ=1
   -D PRINT_HUD_ACTION_QUEUE_SEND=1
   -D PRINT_HUD_ACTION_QUEUE_READ=1
   -D FEATURE_CRUISE_CONTROL=true
