Printing git branch. getCurrentGitBranch.py

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ test_filter = test_smoother
 build_flags =
   -D VERSION=2.8
   -D VERSION_BOARD_COMPAT=2.6
+  !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
