Fixed sending CYCLE_BRIGHTNESS

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,10 +46,10 @@ build_flags =
 
   ${env.build_flags}
 
-  -D DEBUG_BUILD
+  -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_STATE=1
-  ; -D PRINT_COMMS_STATE_EVENT=1
+  -D PRINT_COMMS_STATE=1
+  -D PRINT_COMMS_STATE_EVENT=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_RESET_DETECTION=1
   ; -D PRINT_DISP_STATE=1
@@ -58,12 +58,12 @@ build_flags =
   ; -D PRINT_BUTTON_EVENTS=1
   ; -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
-  ; -D PRINT_TX_TO_HUD=1
-  -D PRINT_RX_FROM_HUD=1
+  -D PRINT_TX_TO_HUD=1
+  ; -D PRINT_RX_FROM_HUD=1
   ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
   ; -D PRINT_HUD_TASKS_QUEUE_READ=1
   ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
-  -D PRINT_HUD_ACTION_QUEUE_READ=1
+  ; -D PRINT_HUD_ACTION_QUEUE_READ=1
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
