--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ test_filter = test_smoother
 
 build_flags =
   -D VERSION=2.8
-  -D VERSION_BOARD_COMPAT=2.6
+  -D VERSION_BOARD_COMPAT=3.0
   !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
 
 lib_deps = 
@@ -49,7 +49,7 @@ build_flags =
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
-  -D PRINT_COMMS_STATE_EVENT=1
+  # -D PRINT_COMMS_STATE_EVENT=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_RESET_DETECTION=1
   ; -D PRINT_DISP_STATE=1
