--- a/platformio.ini
+++ b/platformio.ini
@@ -56,23 +56,23 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
   ; -D PRINT_BUTTON_EVENTS=1
-  ; -D PRINT_TX_TO_BOARD=1
+  # -D PRINT_TX_TO_BOARD=1
   ; -D PRINT_RX_FROM_BOARD=1
-  -D PRINT_TX_TO_HUD=1
+  # -D PRINT_TX_TO_HUD=1
   ; -D PRINT_RX_FROM_HUD=1
   ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
   ; -D PRINT_HUD_TASKS_QUEUE_READ=1
   ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
   ; -D PRINT_HUD_ACTION_QUEUE_READ=1
+  
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
-  -D SEND_TO_BOARD_INTERVAL=200
+  -D SEND_TO_BOARD_INTERVAL=500
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D IGNORE_IF_HUD_OFFLINE=1
   ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
-  ; -D STATE_STRING_FORMAT="[%s | %s]\n"
 
 ;-------------------------------------------------------
 [env:esp32dev.release]
