--- a/platformio.ini
+++ b/platformio.ini
@@ -50,24 +50,25 @@ build_flags =
   -D DEBUG_SERIAL
   -D PRINT_COMMS_STATE=1
   # -D PRINT_COMMS_STATE_EVENT=1
-  ; -D PRINT_THROTTLE=1
+  # -D PRINT_THROTTLE=1
+  # -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
-  ; -D PRINT_DISP_STATE=1
-  ; -D PRINT_DISP_STATE_EVENT=1
-  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
-  ; -D PRINT_BUTTON_EVENTS=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
+  # -D PRINT_IF_TOTAL_FAILED_SENDING=1
   # -D PRINT_TX_TO_BOARD=1
-  ; -D PRINT_RX_FROM_BOARD=1
+  # -D PRINT_RX_FROM_BOARD=1
   # -D PRINT_TX_TO_HUD=1
-  ; -D PRINT_RX_FROM_HUD=1
-  ; -D PRINT_HUD_TASKS_QUEUE_SEND=1
-  ; -D PRINT_HUD_TASKS_QUEUE_READ=1
-  ; -D PRINT_HUD_ACTION_QUEUE_SEND=1
-  ; -D PRINT_HUD_ACTION_QUEUE_READ=1
+  # -D PRINT_RX_FROM_HUD=1
+  # -D PRINT_HUD_TASKS_QUEUE_SEND=1
+  # -D PRINT_HUD_TASKS_QUEUE_READ=1
+  # -D PRINT_HUD_ACTION_QUEUE_SEND=1
+  # -D PRINT_HUD_ACTION_QUEUE_READ=1
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=500
+  -D LONGCLICK_MS=1000
   -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
   -D IGNORE_IF_HUD_OFFLINE=1
   ; how often we store moving time data in memory
@@ -83,7 +84,7 @@ build_flags =
   ${env.build_flags}
 
   -D RELEASE_BUILD
-  ; -D DEBUG_SERIAL
+  # -D DEBUG_SERIAL
   -D FEATURE_CRUISE_CONTROL
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
@@ -115,7 +116,7 @@ lib_deps =
 src_filter = ${dir.rtos_play}
 
 build_flags = 
-  ; -D USE_DEADMAN
+  # -D USE_DEADMAN
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
