--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
 
   https://github.com/greiman/DigitalIO.git
+  https://github.com/nRF24/RF24.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/RobTillaart/FastMap.git
   
@@ -37,7 +38,16 @@ lib_deps =
   https://github.com/skelstar/Esk8-Shared.git#improvements
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
   
-  
+
+[env:ESP32_SPI]
+build_flags = 
+  -D SOFT_SPI_MOSI_PIN=13 # Blue
+  -D SOFT_SPI_MISO_PIN=12 # Orange
+  -D SOFT_SPI_SCK_PIN=15  # Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
@@ -45,6 +55,7 @@ src_filter = ${dir.main}
 build_flags = 
 
   ${env.build_flags}
+  ${env:ESP32_SPI.build_flags}
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
@@ -64,6 +75,7 @@ build_flags =
   # -D PRINT_HUD_TASKS_QUEUE_READ=1
   # -D PRINT_HUD_ACTION_QUEUE_SEND=1
   # -D PRINT_HUD_ACTION_QUEUE_READ=1
+
   
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
@@ -82,6 +94,7 @@ src_filter = ${dir.main}
 build_flags = 
 
   ${env.build_flags}
+  ${env:ESP32_SPI.build_flags}
 
   -D RELEASE_BUILD
   # -D DEBUG_SERIAL
