Cores defined in platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,6 +48,13 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+[env:ESP32_CORES]
+build_flags =
+  -D DISPLAY_TASK_CORE=0
+  -D COMMS_TASK_CORE=0
+  -D BATTERY_TASK_CORE=0
+  -D HUD_TASK_CORE=1
+
 ;-------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
@@ -56,6 +63,7 @@ build_flags =
 
   ${env.build_flags}
   ${env:ESP32_SPI.build_flags}
+  ${env:ESP32_CORES.build_flags}
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
@@ -95,6 +103,7 @@ build_flags =
 
   ${env.build_flags}
   ${env:ESP32_SPI.build_flags}
+  ${env:ESP32_CORES}
 
   -D RELEASE_BUILD
   # -D DEBUG_SERIAL
